--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\GustavoF\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=/home/kiritoxcii/.netbeans/8.0/build.properties
